--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 ・動物（どうぶつ）の筋肉（きんにく）のうごきをよくみよう</p>
             </div>
             <div class="image">
-                <img src="./images/camera.webp" alt="Camera and sensors">
+                <img src="./images/camera.png" alt="Camera and sensors">
             </div>
         </div>
     </div>
