--- a/index.html
+++ b/index.html
@@ -12,92 +12,111 @@
             font-family: 'Noto Sans JP', sans-serif;
             background-color: #1a1a2e;
             color: #ffffff;
-            overflow: hidden;
+            line-height: 1.6;
         }
         .slide {
-            width: 100vw;
-            height: 100vh;
-            display: none;
-            flex-direction: column;
-            justify-content: center;
-            padding: 40px;
+            width: 100%;
+            min-height: 100vh;
+            padding: 20px;
             box-sizing: border-box;
-            position: relative;
-            overflow: hidden;
             background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%);
-        }
-        .slide.active {
-            display: flex;
+            border-bottom: 2px solid #ffffff;
         }
         h1 {
-            font-size: 5vw;
+            font-size: 24px;
             margin: 0 0 20px 0;
-            padding: 20px;
+            padding: 10px;
             background: rgba(255,255,255,0.1);
-            border-radius: 15px;
+            border-radius: 10px;
             text-align: center;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
         }
         .content {
             display: flex;
-            justify-content: space-between;
+            flex-direction: column;
             align-items: center;
-            height: 100%;
         }
         .text {
-            width: 50%;
-            padding-right: 40px;
-        }
-        .text p, .text li {
-            font-size: 2.5vw;
-            line-height: 1.6;
+            width: 100%;
             margin-bottom: 20px;
         }
+        .text p, .text li {
+            font-size: 16px;
+            margin-bottom: 10px;
+        }
         .image {
-            width: 45%;
-            height: 80%;
+            width: 100%;
+            max-width: 300px;
+            height: auto;
             display: flex;
             justify-content: center;
             align-items: center;
             background: rgba(255,255,255,0.1);
-            border-radius: 20px;
-            box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+            border-radius: 10px;
+            box-shadow: 0 5px 10px rgba(0,0,0,0.2);
             overflow: hidden;
+            margin-bottom: 20px;
         }
         .image img {
-            max-width: 100%;
-            max-height: 100%;
+            width: 100%;
+            height: auto;
             object-fit: cover;
-            transition: transform 0.3s ease;
-        }
-        .image:hover img {
-            transform: scale(1.05);
         }
         .bottom-image {
-            position: absolute;
-            bottom: 40px;
-            left: 50%;
-            transform: translateX(-50%);
-            max-width: 80%;
-            max-height: 30%;
-            border-radius: 15px;
-            box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+            margin: 20px auto;
+            display: block;
         }
         ul, ol {
-            padding-left: 30px;
+            padding-left: 20px;
         }
         a {
             color: #4a9ff5;
             text-decoration: none;
-            transition: color 0.3s ease;
+            word-break: break-all;
         }
         a:hover {
             color: #7cb9f8;
         }
+
+        /* Tablet and Desktop styles */
+        @media (min-width: 768px) {
+            h1 {
+                font-size: 36px;
+            }
+            .content {
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: flex-start;
+            }
+            .text {
+                width: 50%;
+                padding-right: 20px;
+            }
+            .text p, .text li {
+                font-size: 18px;
+            }
+            .image {
+                width: 45%;
+                max-width: none;
+            }
+        }
+
+        @media (min-width: 1024px) {
+            h1 {
+                font-size: 48px;
+            }
+            .text p, .text li {
+                font-size: 20px;
+            }
+        }
     </style>
 </head>
 <body>
-    <div class="slide active">
+    <div class="slide">
         <h1>プログラミングを楽しもう！</h1>
         <div class="content">
             <div class="text">
@@ -170,7 +189,7 @@
                 ・動物（どうぶつ）の筋肉（きんにく）のうごきをよくみよう</p>
             </div>
             <div class="image">
-                <img src="./images/camera.png" alt="Camera and sensors">
+                <img src="./images/camera.webp" alt="Camera and sensors">
             </div>
         </div>
     </div>
@@ -239,36 +258,5 @@
             </div>
         </div>
     </div>
-
-    <script>
-        const slides = document.querySelectorAll('.slide');
-        let currentSlide = 0;
-
-        function showSlide(index) {
-            slides[currentSlide].classList.remove('active');
-            slides[index].classList.add('active');
-            currentSlide = index;
-        }
-
-        function nextSlide() {
-            if (currentSlide < slides.length - 1) {
-                showSlide(currentSlide + 1);
-            }
-        }
-
-        function previousSlide() {
-            if (currentSlide > 0) {
-                showSlide(currentSlide - 1);
-            }
-        }
-
-        document.addEventListener('keydown', function(event) {
-            if (event.key === 'Enter' || event.key === ' ' || event.key === 'ArrowRight') {
-                nextSlide();
-            } else if (event.key === 'ArrowLeft') {
-                previousSlide();
-            }
-        });
-    </script>
 </body>
 </html>
