--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <br><p>えすこーとプログラミング合宿 2024 </p>
             </div>
             <div class="image">
-                <img src="./images/top.webp" alt="Programming introduction">
+                <img src="https://cdn.midjourney.com/063b6094-1101-4919-9f5b-58c5b1b102fc/0_0.png" alt="Programming introduction">
             </div>
         </div>
     </div>
@@ -287,6 +287,23 @@
             </div>
         </div>
         <img src="./images/whats-pic-sdgs.png" alt="SDGs" class="bottom-image">
+    </div>
+
+    <div class="slide">
+        <h1>環境問題</h1>
+        <div class="content">
+            <div class="text">
+                <p><li>リサイクル分別ロボット</li>
+                    <li>ゴミ拾いロボット</li>
+                   <li>水やりロボット</li>
+                    <li>植樹ロボット</li>
+                    <li>洪水警報ロボット</li>
+                    <li>蜂保護ロボット</li>
+                     <li>堆肥かき混ぜロボット</li>
+                    <li> 野生動物監視ロボット</li></p>
+            </div>
+        </div>
+        <img src="https://cdn.midjourney.com/74024752-3308-4f9f-b906-7de68a00e3cc/0_2.png" alt="girlfix" class="bottom-image">
     </div>
 
     <div class="slide">
