--- a/index.html
+++ b/index.html
@@ -293,14 +293,17 @@
         <h1>環境問題</h1>
         <div class="content">
             <div class="text">
-                <p><li>リサイクル分別ロボット</li>
+                <p>環境問題を解決するためのロボットのアイデア：</p>
+                <ul>
+                    <li>リサイクル分別ロボット</li>
                     <li>ゴミ拾いロボット</li>
-                   <li>水やりロボット</li>
+                    <li>水やりロボット</li>
                     <li>植樹ロボット</li>
                     <li>洪水警報ロボット</li>
                     <li>蜂保護ロボット</li>
-                     <li>堆肥かき混ぜロボット</li>
-                    <li> 野生動物監視ロボット</li></p>
+                    <li>堆肥かき混ぜロボット</li>
+                    <li>野生動物監視ロボット</li>
+                </ul>
             </div>
         </div>
         <img src="https://cdn.midjourney.com/74024752-3308-4f9f-b906-7de68a00e3cc/0_2.png" alt="girlfix" class="bottom-image">
