--- a/index.html
+++ b/index.html
@@ -305,9 +305,10 @@
                     <li>野生動物監視ロボット</li>
                 </ul>
             </div>
-        </div>
-        <img src="https://cdn.midjourney.com/74024752-3308-4f9f-b906-7de68a00e3cc/0_2.png" alt="girlfix" class="bottom-image">
+        <div class="image">
+        <img src="https://cdn.midjourney.com/74024752-3308-4f9f-b906-7de68a00e3cc/0_2.png" alt="girlfix" class="bottom-image"></div>
     </div>
+
 
     <div class="slide">
         <h1>まとめ</h1>
