--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     <li>ゲームを作（つく）る 🎮</li>
                     <li>ロボットを動（うご）かす 🤖</li>
                 </ul>
-                <p>例（れい）えば、冷蔵庫（れいぞうこ）・炊飯器（すいはんき）、ATM・レジ、ルンバ、お風呂（ふろ）のスイッチ</p>
+                <p>例（たと）えば、冷蔵庫（れいぞうこ）・炊飯器（すいはんき）、ATM・レジ、ルンバ、お風呂（ふろ）のスイッチ</p>
             </div>
             <div class="image">
                 <img src="./images/various_programming.webp" alt="Various programming examples">
