--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
                 
                     <p>― スティーブ・ジョブズ</p>
 
-                    <p><a href>話してみよう<https://character.ai/chat/mTYuA8kQSm8fzEEhTJaN7SLWsv6GOo48-MK2yzAR944></p>
+                    <p><a href="https://character.ai/chat/mTYuA8kQSm8fzEEhTJaN7SLWsv6GOo48-MK2yzAR944">話してみよう</a></p>
                     <img src="./images/bike.png" alt="SDGs" class="bottom-image">
    
             </div>
