--- a/index.html
+++ b/index.html
@@ -557,14 +557,39 @@
                 <p>コンピュータは、私(わたし)たちの頭(あたま)にとって自転車(じてんしゃ)みたいなすごい道具(どうぐ)なんだよ。」
                 
                     <p>― スティーブ・ジョブズ</p>
-
-                    <p><a href="https://character.ai/chat/mTYuA8kQSm8fzEEhTJaN7SLWsv6GOo48-MK2yzAR944">話してみよう</a></p>
-                    <img src="./images/bike.png" alt="SDGs" class="bottom-image">
+                    <img src="./images/steve.png" alt="Steve" class="bottom-image">
+                    
+                    <img src="./images/bike.png" alt="bike" class="bottom-image">
    
+                    <p><a href="https://c.ai/c/mTYuA8kQSm8fzEEhTJaN7SLWsv6GOo48-MK2yzAR944">スティーブと話してみよう</a></p>
             </div>
     </div>
     <div class="slide">
-        <h1>SDGsに貢献しよう</h1>
+        <h1>まとめ</h1>
+        <div class="content">
+            <div class="text">
+                <ul>
+                    <li>プログラミングは楽（たの）しい！ 😊</li>
+                    <li>コンピューターをつかって、ヒーローのような力（チカラ）をつけよう</li>
+                    <li>チームで好（す）きなものを作（つく）ってみよう！</li>
+                    <li>いろんなことができるよ！ 🌟</li>
+                    <li>失敗（しっぱい）しても大丈夫（だいじょうぶ）、どんどん挑戦（ちょうせん）しよう！ 💪</li>
+                    <li>世（よ）の中（なか）のいろんなことを解決（かいけつ）しよう！ 🌍</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="slide">
+        <h1>質問（しつもん）タイム</h1>
+        <div class="content">
+            <div class="text">
+                <p>何（なに）か聞（き）きたいことはある？</p>
+            </div>
+        </div>
+    </div>
+    <div class="slide">
+        <h1>（プレゼングループ）環境問題に貢献しよう</h1>
         <div class="content">
             <div class="text">
                 <p>プログラミングを使（つか）って、環境問題（かんきょうもんだい）に貢献（こうけん）しよう</p>
@@ -594,29 +619,7 @@
     </div>
 
 
-    <div class="slide">
-        <h1>まとめ</h1>
-        <div class="content">
-            <div class="text">
-                <ul>
-                    <li>プログラミングは楽（たの）しい！ 😊</li>
-                    <li>チームで好（す）きなものを作（つく）ってみよう！</li>
-                    <li>いろんなことができるよ！ 🌟</li>
-                    <li>失敗（しっぱい）しても大丈夫（だいじょうぶ）、どんどん挑戦（ちょうせん）しよう！ 💪</li>
-                    <li>世（よ）の中（なか）のいろんなところで使（つか）われているんだ！ 🌍</li>
-                </ul>
-            </div>
-        </div>
-    </div>
 
-    <div class="slide">
-        <h1>質問（しつもん）タイム</h1>
-        <div class="content">
-            <div class="text">
-                <p>何（なに）か聞（き）きたいことはある？</p>
-            </div>
-        </div>
-    </div>
 
     <div class="slide">
         <h1>AIをつかってみよう！</h1>
@@ -626,6 +629,7 @@
                     <li>物語（ものがたり）を作ろう ChatGPT</li>
                     <li>音楽（おんがく）を作ろう SunoAI</li>
                     <li>声（こえ）や音（おと）を作ろう ElevenLabs</li>
+                    <li>絵(え)を作ろう ElevenLabs</li>
                     <li>ゲームを作ろう Create</li>
                 </ul>
             </div>
